@@ -1,3 +1,8 @@
+2003-09-17  Roland Mas  <mas@echo.fr>
+
+	* docs/debian-guide.html: A few fixes, s/debian-sf/gforge/ and
+	adding my own pages.
+
 2003-09-16 Tom Copeland  <tom@infoether.com>
 
 	* www/include/languages/Base.tab:
